# Master_Of_Jokes

./: Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
api/: index.py
app/: __init__.py  auth.py  forms.py  models.py  routes.py  utils.py
app/static/css/: style.css
app/templates/: base.html  edit_balance.html  edit_joke.html  error.html  index.html  jokes.html  leave_joke.html  login.html  managejoke.html  moderate_users.html  my_jokes.html  register.html  take_joke.html  view_joke.html
instance/: app.db  masterofjokes.db
migrations/versions/: 606555566f25_add_role_column_to_user_model.py
tests/: test_auth.py
