[tool.poetry]
name = "flask-jokes-app"
version = "0.1.0"
description = "A simple Flask jokes app"
authors = ["Vaishnavi Rai"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.1"
flask-sqlalchemy = "^3.0"
flask-login = "^0.6"
flask-wtf = "^1.0"
email-validator = "^1.3"
flask_migrate = "^4.0"
sqlalchemy = "^2.0"  
gunicorn = "^20.1"  # Optional: For production WSGI server

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"